Use query execution start time as the value of now-like functions. (#1047)